--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [bumpversion]
-current_version = 0.1.2
+current_version = 0.0.1
 commit = True
 tag = True
 
 [bumpversion:file:setup.py]
 
 [bumpversion:file:Cargo.toml]
-search = name = "py_cpp_demangle"
+search = name = "py_msvc_demangler"
 	version = "{current_version}"
-replace = name = "py_cpp_demangle"
+replace = name = "py_msvc_demangler"
 	version = "{new_version}"
