--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "py_cpp_demangle"
-version = "0.1.2"
-authors = ["Ben Frederickson <github@benfrederickson.com>"]
+version = "0.1.3"
+authors = ["Ben Frederickson <github@benfrederickson.com>", "Andrew V. Teylu <andrew@tey.lu>"]
 edition = "2021"
 
 [lib]
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 cpp_demangle = "0.4.0"
+msvc-demangler = "0.9.0"
 
 [dependencies.pyo3]
 version = "0.17.3"
