--- a/.github/workflows/create_wheels.yaml
+++ b/.github/workflows/create_wheels.yaml
@@ -55,7 +55,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        path: py_cpp_demangle_source
+        path: py_msvc_demangler_source
     - uses: actions/download-artifact@v3
       with:
         name: wheels
@@ -65,10 +65,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install wheel
       run: |
-        pip install --force-reinstall --no-deps --no-index --find-links . cpp-demangle
+        pip install --force-reinstall --no-deps --no-index --find-links . msvc-demangler
     - name: Run unittests
       run: |
-        python -m unittest discover py_cpp_demangle_source/tests
+        python -m unittest discover py_msvc_demangler_source/tests
 
   release:
     name: Release
